--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -1,5 +1,5 @@
 .contacts {
-    min-height: 100vh;
+    min-height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -205,6 +205,12 @@
     .personal-details p {
         margin-left: 1rem;
         font-size: 1rem;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .socialmedia-icons {
+        padding-left: 4%;
     }
 }
 
