--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -163,6 +163,11 @@
     flex-direction: column;
     justify-content: space-between;
   }
+
+  .lcr-buttonContainer a {
+    margin-top: 45px;
+  }
+
   .landing--img {
     --img-size: 200px;
     left: 50%;
@@ -210,6 +215,7 @@
   }
   .lcr-buttonContainer {
     margin: 0 auto;
+    margin-top: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
